# vim: set noexpandtab:

2013-11-06 Steve
	* Update pileup file to default file for both mc12a and mc12b: PileupReweighting/mc12ab_defaults.prw.root
	* Updates for SUSYTools-00-03-09
		* Tau SFs now in TauCorrUncert/TauSF
	* Cleaned up some code

2013-10-28 Steve
	* Merged SusyCommon-00-01-03-branch into trunk
		* Update to MC12 pileup reweighting file

2013-10-04 Davide
	* Add etcone20 to Lepton

2013-09-24 Davide
	* Add "DG_MeadePoint" to the list of known susy-sample patterns

2013-08-19 Davide
	* Add secondary vertex mass to Jet

2013-08-16 Davide
	* Add emfrac to Jet
	* Add truth indices for ttbar truth

2013-07-24 Davide
	* Bugfix hasSusyProp -> cut++

2013-07-07 Steve
	* Changed default MET to Default in SusyD3PDAna
	* Added flag for controlling met muon Eloss correction, set to false by default
	* Added shifted pileup weights for pileup sys
	* Set newD3PD flag to true for taus in SUSYTools
	* Tagging SusyCommon-00-01-03

2013-07-06 Matt
	* Saving met weights for the jets.

2013-07-02 Matt
	* Saving sumet for met and various met terms.

2013-06-20 Steve
	* Fixed GRL path, added error check for GRL reader problems
	* Fixed access of mc channel_number in data
	* Tagging SusyCommon-00-01-02

2013-06-20 Davide
	* Add the counters to correct for events with the SUSY propagator bug
	* Tagging SusyCommon-00-01-01

2013-06-19 Steve
	* Tagging SusyCommon-00-01-00

2013-06-18 Steve
	* Update for p1512: jet.sumPtTrk -> jet.sumPtTrk_pv0_500MeV

2013-06-18 Steve
	* Tagging SusyCommon-00-00-74

2013-06-17 Steve
	* Updated tau eta cut to 2.47

2013-06-14 Steve
	* Dropped eta cut on baseline jet selection. 
	  This was a straightforward way to ensure the correct jets are used for the bad jet veto.
	  See the sharepoint thread "Discussion on bad jet event veto" on the direct gaugino workspace
	  on June 11, 2013.

2013-06-05 Steve
	* Updated pileup file for new GRL
	* Added isBadMuon and isCosmicMuon flags to muons
	* Added isBadVeryLoose and isHotTile flags to jets